--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.4",
+    "firebase": "^12.8.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
